Save unquantised and quantised images for analysis.

--- a/compare patient unquantised CTVI with PET.ipynb
+++ b/compare patient unquantised CTVI with PET.ipynb
@@ -812,6 +812,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### save the unquantised images "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "UNQUANTISED_IMAGES_DIR = '{}/unquantised-images'.format(PREPROCESSED_BASE_DIR)\n",
+    "if not os.path.exists(UNQUANTISED_IMAGES_DIR):\n",
+    "    os.makedirs(UNQUANTISED_IMAGES_DIR)\n",
+    "PATIENT_UNQUANTISED_DIR = '{}/Patient{:02d}'.format(UNQUANTISED_IMAGES_DIR, patient_id)\n",
+    "if not os.path.exists(PATIENT_UNQUANTISED_DIR):\n",
+    "    os.makedirs(PATIENT_UNQUANTISED_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving unquantised images to /mnt/data/datasets/RNSH_HFlung/pre-processed-plastimatch/unquantised-images/Patient01\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('saving unquantised images to {}'.format(PATIENT_UNQUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(exp_arr, (2,1,0)), np.eye(4)).to_filename('{}/exhale.nii.gz'.format(PATIENT_UNQUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(insp_arr, (2,1,0)), np.eye(4)).to_filename('{}/inhale.nii.gz'.format(PATIENT_UNQUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(exh_mask_arr, (2,1,0)).astype(np.int8), np.eye(4)).to_filename('{}/exhale-mask.nii.gz'.format(PATIENT_UNQUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(pet_arr, (2,1,0)), np.eye(4)).to_filename('{}/unquantised-pet.nii.gz'.format(PATIENT_UNQUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(ctvi_jac_arr, (2,1,0)), np.eye(4)).to_filename('{}/unquantised-ctvi-jac.nii.gz'.format(PATIENT_UNQUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(ctvi_hu_arr, (2,1,0)), np.eye(4)).to_filename('{}/unquantised-ctvi-hu.nii.gz'.format(PATIENT_UNQUANTISED_DIR))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### quantise the CTVI and save for the next step"
    ]
   },
@@ -824,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +887,7 @@
        "(np.float32(0.7243961), np.float32(0.64375484))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +939,7 @@
        "(np.float64(0.13474103168327112), np.float64(0.13415137665238902))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1085,12 +1129,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "sitk.WriteImage(sitk.GetImageFromArray(ctvi_jac_label_arr), '{}/ctvi-jac-label.mha'.format(PREPROCESSED_MHA_DIR))\n",
     "sitk.WriteImage(sitk.GetImageFromArray(ctvi_hu_label_arr), '{}/ctvi-hu-label.mha'.format(PREPROCESSED_MHA_DIR))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### save the quantised images "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "QUANTISED_IMAGES_DIR = '{}/quantised-images'.format(PREPROCESSED_BASE_DIR)\n",
+    "if not os.path.exists(QUANTISED_IMAGES_DIR):\n",
+    "    os.makedirs(QUANTISED_IMAGES_DIR)\n",
+    "PATIENT_QUANTISED_DIR = '{}/Patient{:02d}'.format(QUANTISED_IMAGES_DIR, patient_id)\n",
+    "if not os.path.exists(PATIENT_QUANTISED_DIR):\n",
+    "    os.makedirs(PATIENT_QUANTISED_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving quantised images to /mnt/data/datasets/RNSH_HFlung/pre-processed-plastimatch/quantised-images/Patient01\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('saving quantised images to {}'.format(PATIENT_QUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(exp_arr, (2,1,0)), np.eye(4)).to_filename('{}/exhale.nii.gz'.format(PATIENT_QUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(insp_arr, (2,1,0)), np.eye(4)).to_filename('{}/inhale.nii.gz'.format(PATIENT_QUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(exh_mask_arr, (2,1,0)).astype(np.int8), np.eye(4)).to_filename('{}/exhale-mask.nii.gz'.format(PATIENT_QUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(pet_labels_arr, (2,1,0)).astype(np.int8), np.eye(4)).to_filename('{}/quantised-pet.nii.gz'.format(PATIENT_QUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(ctvi_jac_label_arr, (2,1,0)).astype(np.int8), np.eye(4)).to_filename('{}/quantised-ctvi-jac.nii.gz'.format(PATIENT_QUANTISED_DIR))\n",
+    "nib.Nifti1Image(np.transpose(ctvi_hu_label_arr, (2,1,0)).astype(np.int8), np.eye(4)).to_filename('{}/quantised-ctvi-hu.nii.gz'.format(PATIENT_QUANTISED_DIR))"
    ]
   },
   {
