--- a/compare all nnunet predictions with quantised PET and CTVI-DIR.ipynb
+++ b/compare all nnunet predictions with quantised PET and CTVI-DIR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "f8e57a45-e7a3-44ca-8ad6-a3346c091fcb",
    "metadata": {
     "editable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "ad68aa06-b92d-4904-bf35-2ba7d9e68527",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "71345cd4-616c-4147-bcde-c86cfd209dcb",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "d2036cfe-4fcb-4799-9e93-e3ae9362ce62",
    "metadata": {},
    "outputs": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "id": "720edaba-84e0-4ef6-9100-52551332a973",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "c12e2832-6640-41e2-aae3-d3d009d4e74b",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "52aa81b1-8512-465b-89f6-dd4cba78a607",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "ce91f0cd-d557-4b58-8bd0-c871fa0593c7",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "15a9b31e-9cf0-4031-b1d3-aa3b1fbc12cf",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "884ade10-4ba0-4ea9-81bc-77d1843ee09d",
    "metadata": {},
    "outputs": [],
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "id": "d7aa521b-4c9d-418f-8fcb-42af305dd8d6",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "id": "a15a8c1a-a877-47d7-bd2c-bed4904a15ff",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "e9f7f658-677e-464c-a721-3aa31bbcc5b5",
    "metadata": {},
    "outputs": [],
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "id": "952a09d7-371b-4bf1-a18b-92c3c9c9a0df",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "b932d693-d5ea-442a-a3ef-8997a9b37350",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "id": "536a1606-de83-483a-bad7-ee6ce029f213",
    "metadata": {},
    "outputs": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "id": "b856a848-63da-46e1-8bec-c7f76fe0e469",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "id": "da83643e-e7cc-4365-bbdb-6598c6f5c3d4",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "id": "dcf82c03-37f5-42c4-b375-e81f3705e0fb",
    "metadata": {},
    "outputs": [
@@ -600,24 +600,24 @@
      "output_type": "stream",
      "text": [
       "high-function HD95 mean (range)\n",
-      "nnU-Net        34.3 (12.7 to 63.8)\n",
-      "nnU-Net-2D     34.2 (18.6 to 71.5)\n",
-      "Jac            34.0 (24.1 to 62.6)\n",
-      "HU             34.6 (22.1 to 48.2)\n"
+      "nnU-Net        34 mm (13 to 64 mm)\n",
+      "nnU-Net-2D     34 mm (19 to 72 mm)\n",
+      "Jac            34 mm (24 to 63 mm)\n",
+      "HU             35 mm (22 to 48 mm)\n"
      ]
     }
    ],
    "source": [
     "print('high-function HD95 mean (range)')\n",
-    "print('{: <15}{:0.1f} ({:0.1f} to {:0.1f})'.format('nnU-Net', np.mean(boxplot_nnunet[0]), np.min(boxplot_nnunet[0]), np.max(boxplot_nnunet[0])))\n",
-    "print('{: <15}{:0.1f} ({:0.1f} to {:0.1f})'.format('nnU-Net-2D', np.mean(boxplot_nnunet_2d[0]), np.min(boxplot_nnunet_2d[0]), np.max(boxplot_nnunet_2d[0])))\n",
-    "print('{: <15}{:0.1f} ({:0.1f} to {:0.1f})'.format('Jac', np.mean(boxplot_jac[0]), np.min(boxplot_jac[0]), np.max(boxplot_jac[0])))\n",
-    "print('{: <15}{:0.1f} ({:0.1f} to {:0.1f})'.format('HU', np.mean(boxplot_hu[0]), np.min(boxplot_hu[0]), np.max(boxplot_hu[0])))"
+    "print('{: <15}{:0.0f} mm ({:0.0f} to {:0.0f} mm)'.format('nnU-Net', np.mean(boxplot_nnunet[0]), np.min(boxplot_nnunet[0]), np.max(boxplot_nnunet[0])))\n",
+    "print('{: <15}{:0.0f} mm ({:0.0f} to {:0.0f} mm)'.format('nnU-Net-2D', np.mean(boxplot_nnunet_2d[0]), np.min(boxplot_nnunet_2d[0]), np.max(boxplot_nnunet_2d[0])))\n",
+    "print('{: <15}{:0.0f} mm ({:0.0f} to {:0.0f} mm)'.format('Jac', np.mean(boxplot_jac[0]), np.min(boxplot_jac[0]), np.max(boxplot_jac[0])))\n",
+    "print('{: <15}{:0.0f} mm ({:0.0f} to {:0.0f} mm)'.format('HU', np.mean(boxplot_hu[0]), np.min(boxplot_hu[0]), np.max(boxplot_hu[0])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "id": "e2a50746-5fba-41ce-9303-06d3ef9f1ff1",
    "metadata": {},
    "outputs": [],
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
    "id": "220d4971-b241-41d2-8552-931093d0cb13",
    "metadata": {},
    "outputs": [],
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 61,
    "id": "71a442bb-d4ce-4cad-8c3f-9319b99096a5",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 62,
    "id": "c7545a72-81b2-4e4f-b7f1-d366383c4a41",
    "metadata": {},
    "outputs": [],
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 63,
    "id": "21e36495-7a4d-4aed-8c9a-712869981211",
    "metadata": {},
    "outputs": [
@@ -767,24 +767,24 @@
      "output_type": "stream",
      "text": [
       "high-function MSD mean (range)\n",
-      "nnU-Net        7.88 (3.36 to 11.25)\n",
-      "nnU-Net-2D     8.19 (4.79 to 14.84)\n",
-      "Jac            9.43 (6.70 to 17.00)\n",
-      "HU             8.55 (5.24 to 12.37)\n"
+      "nnU-Net        8 mm (3 to 11 mm)\n",
+      "nnU-Net-2D     8 mm (5 to 15 mm)\n",
+      "Jac            9 mm (7 to 17 mm)\n",
+      "HU             9 mm (5 to 12 mm)\n"
      ]
     }
    ],
    "source": [
     "print('high-function MSD mean (range)')\n",
-    "print('{: <15}{:0.2f} ({:0.2f} to {:0.2f})'.format('nnU-Net', np.mean(boxplot_nnunet[0]), np.min(boxplot_nnunet[0]), np.max(boxplot_nnunet[0])))\n",
-    "print('{: <15}{:0.2f} ({:0.2f} to {:0.2f})'.format('nnU-Net-2D', np.mean(boxplot_nnunet_2d[0]), np.min(boxplot_nnunet_2d[0]), np.max(boxplot_nnunet_2d[0])))\n",
-    "print('{: <15}{:0.2f} ({:0.2f} to {:0.2f})'.format('Jac', np.mean(boxplot_jac[0]), np.min(boxplot_jac[0]), np.max(boxplot_jac[0])))\n",
-    "print('{: <15}{:0.2f} ({:0.2f} to {:0.2f})'.format('HU', np.mean(boxplot_hu[0]), np.min(boxplot_hu[0]), np.max(boxplot_hu[0])))"
+    "print('{: <15}{:0.0f} mm ({:0.0f} to {:0.0f} mm)'.format('nnU-Net', np.mean(boxplot_nnunet[0]), np.min(boxplot_nnunet[0]), np.max(boxplot_nnunet[0])))\n",
+    "print('{: <15}{:0.0f} mm ({:0.0f} to {:0.0f} mm)'.format('nnU-Net-2D', np.mean(boxplot_nnunet_2d[0]), np.min(boxplot_nnunet_2d[0]), np.max(boxplot_nnunet_2d[0])))\n",
+    "print('{: <15}{:0.0f} mm ({:0.0f} to {:0.0f} mm)'.format('Jac', np.mean(boxplot_jac[0]), np.min(boxplot_jac[0]), np.max(boxplot_jac[0])))\n",
+    "print('{: <15}{:0.0f} mm ({:0.0f} to {:0.0f} mm)'.format('HU', np.mean(boxplot_hu[0]), np.min(boxplot_hu[0]), np.max(boxplot_hu[0])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 64,
    "id": "aa9038f2-bb41-4450-8d40-2ab8cd312921",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 65,
    "id": "cfeb1cd9-4d52-414a-8f7c-d486fccacf47",
    "metadata": {},
    "outputs": [],
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 66,
    "id": "716d9e36-50ff-4d79-92e3-bae2f19ff829",
    "metadata": {},
    "outputs": [
@@ -886,8 +886,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "id": "20e22746-8494-4de1-95dd-a74e75746905",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DSC mean (range) for all subregions\n",
+      "nnunet         0.68 (0.56 to 0.82)\n",
+      "nnunet-2D      0.64 (0.47 to 0.75)\n",
+      "ctvi_jac       0.60 (0.38 to 0.73)\n",
+      "ctvi_hu        0.56 (0.30 to 0.75)\n",
+      "-------\n",
+      "HD95 mean (range) for all subregions\n",
+      "nnunet         22 mm (9 to 64 mm)\n",
+      "nnunet-2D      23 mm (9 to 72 mm)\n",
+      "ctvi_jac       22 mm (12 to 63 mm)\n",
+      "ctvi_hu        26 mm (12 to 58 mm)\n",
+      "-------\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics = ['DSC','HD95']\n",
+    "models = ['nnunet','nnunet-2D','ctvi_jac','ctvi_hu']\n",
+    "for metric in metrics:\n",
+    "    print('{} mean (range) for all subregions'.format(metric))\n",
+    "    for model in models:\n",
+    "        df = analysis_df[(analysis_df.metric == metric) & (analysis_df.model == model)]\n",
+    "        if metric == 'HD95':\n",
+    "            f = '{: <15}{:0.0f} mm ({:0.0f} to {:0.0f} mm)'\n",
+    "        else:\n",
+    "            f = '{: <15}{:0.2f} ({:0.2f} to {:0.2f})'\n",
+    "        print(f.format(model, np.mean(df.value), np.min(df.value), np.max(df.value)))\n",
+    "    print('-------')    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c3c278d5-4877-48ee-b7ee-62e30c5a57eb",
+   "id": "178cb254-17d4-441d-b217-784007aec066",
    "metadata": {},
    "outputs": [],
    "source": []
